# mcp-server-manager

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Info.plist  README.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  release.yml
crates/mcpsm-cli/: Cargo.toml
crates/mcpsm-cli/src/: main.rs
crates/mcpsm-core/: Cargo.toml
crates/mcpsm-core/src/: lib.rs  runtime.rs
crates/mcpsm-core/src/bridge/: commands.rs
crates/mcpsm-core/src/core/: config.rs  manager.rs  process.rs  server.rs  shell_env.rs  templates.rs  watcher.rs
crates/mcpsm-core/src/mcp/: client.rs  proxy.rs
crates/mcpsm-core/src/web/: dashboard.html  handlers.rs  mod.rs  server.rs  sse.rs
crates/mcpsm-gui/: Cargo.toml
crates/mcpsm-gui/src/: main.rs
crates/mcpsm-gui/src/gui/: status_bar.rs
docs/: mcp-llms-full.md  preact-llms.md  project-ideas.md  spec.md
resources/: mcpsm.icns
scripts/: build-app.sh  generate-icons.sh
src/: main.rs
src/bridge/: commands.rs
src/core/: config.rs  log_buffer.rs  manager.rs  mod.rs  process.rs  server.rs  templates.rs
src/gui/: status_bar.rs
src/mcp/: client.rs  proxy.rs
src/web/: dashboard.html  handlers.rs  server.rs  state.rs
